--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="aside">
             <div class="logo">
-                <a href="#"><span>K</span>evin</a>
+                <a href="index.html"><span>K</span>evin</a>
             </div>
             <div class="nav-toggler">
                 <span> </span>
@@ -30,7 +30,6 @@
             <ul class="nav">
                 <li><a href="#home" class="active"> <i class="fa fa-home"> </i>Início</a></li>
                 <li><a href="#about"> <i class="fa fa-user"> </i>Sobre</a></li>
-                <li><a href="#portfolio"> <i class="fa fa-briefcase"> </i>Portfólio</a></li>
                 <li><a href="#contact"> <i class="fa fa-comments"> </i>Contato</a></li>
             </ul>
 
@@ -41,9 +40,11 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Olá, meu nome é <span class="name"> Kevin Reis</span></h3>
-                            <h3 class="my-profession">Eu sou um <span class="typing"> Desenvolvedor Web</span></h3>
-                            <p>Eu sou um desenvolvedor web com curso técnico em TI. Meu trabalho é criar páginas web,
-                                também trabalho com back-end, banco de dados e muito mais...</p>
+                            <h3 class="my-profession">Eu sou um <span class="typing"> Estagiário Jurídico</span></h3>
+                            <p>Atualmente curso Direito na Universidade FUMEC e sou vice representante de turma.
+                                Trabalho como estagiário jurídico, fazendo
+                                petições, pesquisas de jurisprudência e etc. Sou também formado em Técnico de TI.
+                            </p>
                             <a href="#contact" class="btn hire-me">Mais Sobre Mim</a>
                         </div>
                         <div class="home-img padd-15">
@@ -64,17 +65,17 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>Eu Sou Kevin Reis, <span>Desenvolvedor Web</span></h3>
-                                    <p>Eu sou Kevin Reis, atualmente tenho 19 anos, curso graduação em Direito e sou formado em
+                                    <h3>Eu Sou Kevin Reis Barbosa,  <span>  Estagiário</span></h3>
+                                    <p> Atualmente tenho 19 anos, curso graduação em Direito e sou formado em
                                         Curso Técnico Para Internet, sou natural de Nova Lima,
-                                        Brasil e amo jogar videogames, futebol e tirar foto de paisagens. Uso meu tempo livre para poder estudar e
-                                        programar, onde mesmo sendo um desafio, eu adoro trabalhar com essa área.
-                                        Joguei futebol desde novo até os meus 17 anos, passei por clubes de categoria de base mas optei por focar nos
+                                        Brasil. Amo jogar videogames, futebol e tirar foto de paisagens. Uso meu tempo livre para poder estudar para a faculdade e 
+                                        adquirir conhecimentos sobre a jurisprudência e melhorar minhas habilidades de TI.
+                                        Joguei futebol desde criança até os meus 17 anos, passei por clubes de categoria de base mas optei por focar nos
                                         meus estudos. Me formei no Ensino Médio
                                         no início de 2021 por causa da pandemia. Realizei a prova do Enem e consegui uma bolsa de graduação para a minha
-                                        faculdade de Direito e fui aprovado na
+                                        faculdade tirando 940 na redação do Enem e fui aprovado na
                                         prova técnica para iniciar meu curso no Senai. Atualmente, estou no terceiro período da faculdade de Direito e sou formado no curso técnico, possuo diversos
-        certificados da Digital Innovation One, relacionados com programação, desenvolvimento web, entre outros. Eu também tenho certificado de intermediário em
+        certificados relacionados com programação. Eu também tenho certificado de intermediário em
         inglês e todos esses certificados estão
         presentes no meu Linkedin.</p>
                                 </div>
@@ -116,7 +117,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="CV Atual - Kevin Reis.pdf" target="_blank" class="btn">Download CV</a>
+                                            <a href="Currículo Atual - Kevin Reis.pdf" target="_blank" class="btn">Download CV</a>
                                             <a href="#contact" class="btn hire-me">Me Contrate</a>
                                         </div>
                                     </div>
@@ -146,7 +147,7 @@
                                                     <h4 class="timeline-title">Técnico em Informática</h4>
                                                     <p class="timeline-text">Sou formado em curso Técnico de Informática pelo SENAI, meu projeto de TCC
                                                         foi um software ergonômico desenvolvido por mim na linguagem de node.js com banco de dados MySql
-                                                        , você pode conferir no meu portfólio este projeto.
+                                                        , você pode conferir no meu GitHub este projeto.
                                                     </p>
                                                 </div>
                                                 <div class="timeline-item">
@@ -192,55 +193,6 @@
                                                     <h4 class="timeline-title">Novo no mercado</h4>
                                                     <p class="timeline-text">Por ser novo no mercado de trabalho, não
                                                         possuo experiências prévias.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="Skills padd-15">
-                                    <h3 class="title">Habilidades</h3>
-                                    <div class="row">
-                                        <div class="timeline-box padd-15">
-                                            <div class="timeline shadow-dark">
-                                                <div class="timeline-item">
-                                                    <div class="circle-dot"> </div>
-                                                    <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2022
-                                                    </h3>
-                                                    <h4 class="timeline-title">HTML</h4>
-                                                    <p class="timeline-text">Conhecimento avançado.</p>
-                                                </div>
-                                                <div class="timeline-item">
-                                                    <div class="circle-dot"> </div>
-                                                    <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2022
-                                                    </h3>
-                                                    <h4 class="timeline-title">CSS</h4>
-                                                    <p class="timeline-text">Conhecimento Avançado.</p>
-                                                </div>
-                                                <div class="timeline-item">
-                                                    <div class="circle-dot"> </div>
-                                                    <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2022
-                                                    </h3>
-                                                    <h4 class="timeline-title">Node.js</h4>
-                                                    <p class="timeline-text">Conhecimento intermediário em Node.</p>
-                                                </div>
-                                                <div class="timeline-item">
-                                                    <div class="circle-dot"> </div>
-                                                    <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2022
-                                                    </h3>
-                                                    <h4 class="timeline-title">JavaScript</h4>
-                                                    <p class="timeline-text">Conhecimento básico em JavaScript.</p>
-                                                </div>
-                                                <div class="timeline-item">
-                                                    <div class="circle-dot"> </div>
-                                                    <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2022
-                                                    </h3>
-                                                    <h4 class="timeline-title">MySql</h4>
-                                                    <p class="timeline-text">Conhecimento intermediário em SQL.</p>
                                                 </div>
                                             </div>
                                         </div>
