--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                     </div>
                                     <div class="row">
                                         <div class="buttons padd-15">
-                                            <a href="Currículo Atual - Kevin Reis.pdf" target="_blank" class="btn">Download CV</a>
+                                            <a href="Currículo - Direito.pdf" target="_blank" class="btn">Download CV</a>
                                             <a href="#contact" class="btn hire-me">Me Contrate</a>
                                         </div>
                                     </div>
