--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Olá, meu nome é <span class="name"> Kevin Reis</span></h3>
                             <h3 class="my-profession">Eu sou um <span class="typing"> Estagiário Jurídico</span></h3>
-                            <p>Atualmente curso Direito na Universidade FUMEC e sou vice representante de turma.
-                                Trabalho como estagiário jurídico, fazendo
-                                petições, pesquisas de jurisprudência e etc. Sou também formado em Técnico de TI.
+                            <p>Atualmente curso Direito na Universidade FUMEC atualmente no terceiro período e sendo vice representante de turma.
+                                Estou livre no mercado e trabalho como estagiário jurídico, fazendo
+                                petições, pesquisas de jurisprudência e qualquer atividade que for requerida. Sou também formado em Técnico de TI.
                             </p>
                             <a href="#contact" class="btn hire-me">Mais Sobre Mim</a>
                         </div>
@@ -66,18 +66,17 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>Eu Sou Kevin Reis Barbosa,  <span>  Estagiário</span></h3>
-                                    <p> Atualmente tenho 19 anos, curso graduação em Direito e sou formado em
-                                        Curso Técnico Para Internet, sou natural de Nova Lima,
-                                        Brasil. Amo jogar videogames, futebol e tirar foto de paisagens. Uso meu tempo livre para poder estudar para a faculdade e 
-                                        adquirir conhecimentos sobre a jurisprudência e melhorar minhas habilidades de TI.
-                                        Joguei futebol desde criança até os meus 17 anos, passei por clubes de categoria de base mas optei por focar nos
+                                    <p> Sou natural de Nova Lima, MG,
+                                        Brasil. Joguei futebol desde criança até os meus 17 anos, passei por clubes de categoria de base como o Villa Nova e Democrata, mas optei por focar nos
                                         meus estudos. Me formei no Ensino Médio
-                                        no início de 2021 por causa da pandemia. Realizei a prova do Enem e consegui uma bolsa de graduação para a minha
-                                        faculdade tirando 940 na redação do Enem e fui aprovado na
-                                        prova técnica para iniciar meu curso no Senai. Atualmente, estou no terceiro período da faculdade de Direito e sou formado no curso técnico, possuo diversos
-        certificados relacionados com programação. Eu também tenho certificado de intermediário em
-        inglês e todos esses certificados estão
-        presentes no meu Linkedin.</p>
+                                        no início de 2021 por consequência da pandemia. Realizei a prova do Enem onde consegui uma bolsa de graduação para a minha
+                                        faculdade, tirando 940 na redação e fui aprovado na
+                                        prova para iniciar meu curso técnico no Senai de TI.
+                                        Atualmente tenho 19 anos, curso superior em Direito e sou formado em
+                                        Curso Técnico de TI. Amo jogar videogames, futebol e capturar imagens de paisagens. Uso meu tempo livre para poder estudar a jurisprodência e 
+                                        adquirir conhecimentos. Também busco melhorar minhas habilidades de programação.
+                                         Atualmente, estou no terceiro período da faculdade de Direito e possuo diversos certificados como de Curso de Word, Excel e Inglês. 
+                                        Busco nessa jornada adquirir o máximo de conhecimento e experiências possíveis, me tornar um bom profissional e poder agregar no ambiente social e de trabalho.</p>
                                 </div>
                                 
                             </div>
@@ -137,7 +136,7 @@
                                                     </h3>
                                                     <h4 class="timeline-title">Ensino Médio</h4>
                                                     <p class="timeline-text">Completei o ensino médio aos 18 anos, fui atleta da equipe escolar e já recebi
-                                                        certificado de desempenho na Escola Estadual João Felipe Da Rocha!</p>
+                                                        certificado de desempenho na Escola Estadual João Felipe Da Rocha.</p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"> </div>
@@ -160,20 +159,43 @@
                                                         sou vice-representante de turma e estudo na Universidade FUMEC.
                                                     </p>
                                                 </div>
+                                               
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="courses padd-15">
+                                    <h3 class="title">Cursos</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"> </div>
                                                     <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Novembro 2022
                                                     </h3>
-                                                    <h4 class="timeline-title">Inglês</h4>
-                                                    <p class="timeline-text">Cursei inglês durante dois anos e possuo um certificado emitido pela EF SET de intermediário na linguagem.
+                                                    <h4 class="timeline-title">Inglês e Inglês Para Atendimento</h4>
+                                                    <p class="timeline-text">Possuo certificados de cursos em inglês pela EFSET e Refuturiza, onde na EFSET possuo o certificado de intermediário
+                                                        após realização da prova, tenho certificados do básico ao avançado em inglês emitido pela Refuturiza e possuo um certificado de Inglês Para Atendimento
+                                                        também emitido pela Refuturiza.
                                                     </p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"> </div>
                                                     <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Novembro 2022
                                                     </h3>
-                                                    <h4 class="timeline-title">Digital Innovation One</h4>
-                                                    <p class="timeline-text">Atualmente realizo cursos de programação da Digital Innovation One com diversos certificados de aprendizagem no Linkedin.
+                                                    <h4 class="timeline-title">Curso De Excel</h4>
+                                                    <p class="timeline-text">Possuo certificados de curso em Excel pela Refuturiza e possuo certificado de competência no LinkedIn em Excel.
+                                                    </p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"> </div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i> Novembro 2022
+                                                    </h3>
+                                                    <h4 class="timeline-title">Curso de Word</h4>
+                                                    <p class="timeline-text">Possuo certificados de curso em Word pela Refuturiza e estou em busca do selo de competência do LinkedIn.
                                                     </p>
                                                 </div>
                                             </div>
