--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <a href="#contact" class="btn hire-me">Mais Sobre Mim</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="Img/Eu.png" alt="">
+                            <img src="Img/Euu.jpg" alt="">
                         </div>
                     </div>
                 </div>
