--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Olá, meu nome é <span class="name"> Kevin Reis</span></h3>
                             <h3 class="my-profession">Eu sou um <span class="typing"> Estagiário Jurídico</span></h3>
-                            <p>Atualmente curso Direito na Universidade FUMEC atualmente no terceiro período e sendo vice representante de turma.
-                                Estou livre no mercado e trabalho como estagiário jurídico, fazendo
-                                petições, pesquisas de jurisprudência e qualquer atividade que for requerida. Sou também formado em Técnico de TI.
+                            <p>Tenho 19 anos e atualmente sou aluno de Direito na Universidade FUMEC e estou no quarto período, sou também vice representante de turma.
+                                Trabalho como estagiário jurídico, fazendo
+                                petições, pesquisas de jurisprudência e qualquer atividade que for requerida, sou também formado em Técnico de Informática para Internet e intermediário em inglês.
                             </p>
                             <a href="#contact" class="btn hire-me">Mais Sobre Mim</a>
                         </div>
@@ -70,13 +70,12 @@
                                         Brasil. Joguei futebol desde criança até os meus 17 anos, passei por clubes de categoria de base como o Villa Nova e Democrata, mas optei por focar nos
                                         meus estudos. Me formei no Ensino Médio
                                         no início de 2021 por consequência da pandemia. Realizei a prova do Enem onde consegui uma bolsa de graduação para a minha
-                                        faculdade, tirando 940 na redação e fui aprovado na
-                                        prova para iniciar meu curso técnico no Senai de TI.
+                                        faculdade, tirando 940 na redação, sendo um dos 5% que obtiveram uma nota acima de 900 e fui aprovado na
+                                         para iniciar meu curso técnico.
                                         Atualmente tenho 19 anos, curso superior em Direito e sou formado em
-                                        Curso Técnico de TI. Amo jogar videogames, futebol e capturar imagens de paisagens. Uso meu tempo livre para poder estudar a jurisprodência e 
-                                        adquirir conhecimentos. Também busco melhorar minhas habilidades de programação.
-                                         Atualmente, estou no terceiro período da faculdade de Direito e possuo diversos certificados como de Curso de Word, Excel e Inglês. 
-                                        Busco nessa jornada adquirir o máximo de conhecimento e experiências possíveis, me tornar um bom profissional e poder agregar no ambiente social e de trabalho.</p>
+                                        Curso Técnico de informática. Amo jogar videogames, jogar futebol e fotografar paisagens. Uso meu tempo livre para poder estudar a jurisprodência e 
+                                        adquirir conhecimentos. Atualmente, estou no quarto período da faculdade de Direito e possuo diversos certificados como de Curso de Word, Excel e Inglês. 
+                                        Busco nessa jornada adquirir o máximo de conhecimento e experiências possíveis, me tornar um bom profissional e poder agregar no ambiente de trabalho.</p>
                                 </div>
                                 
                             </div>
@@ -136,7 +135,7 @@
                                                     </h3>
                                                     <h4 class="timeline-title">Ensino Médio</h4>
                                                     <p class="timeline-text">Completei o ensino médio aos 18 anos, fui atleta da equipe escolar e já recebi
-                                                        certificado de desempenho na Escola Estadual João Felipe Da Rocha.</p>
+                                                        certificado de desempenho no primeiro ano do ensino médio na Escola Estadual João Felipe Da Rocha.</p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"> </div>
@@ -144,7 +143,7 @@
                                                         <i class="fa fa-calendar"></i> 2021 - 2022
                                                     </h3>
                                                     <h4 class="timeline-title">Técnico em Informática</h4>
-                                                    <p class="timeline-text">Sou formado em curso Técnico de Informática pelo SENAI, meu projeto de TCC
+                                                    <p class="timeline-text">Sou formado em curso Técnico de Informática para Internet pelo SENAI, meu projeto de TCC
                                                         foi um software ergonômico desenvolvido por mim na linguagem de node.js com banco de dados MySql
                                                         , você pode conferir no meu GitHub este projeto.
                                                     </p>
@@ -155,7 +154,7 @@
                                                         <i class="fa fa-calendar"></i> 2021 - 2026
                                                     </h3>
                                                     <h4 class="timeline-title">Bacharelado em Direito</h4>
-                                                    <p class="timeline-text">Atualmente, estou cursando nível superior em Direito, estando no meu Terceiro Período,
+                                                    <p class="timeline-text">Atualmente, estou cursando nível superior em Direito, estando no meu Quarto Período,
                                                         sou vice-representante de turma e estudo na Universidade FUMEC.
                                                     </p>
                                                 </div>
