--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"> </div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2022
+                                                        <i class="fa fa-calendar"></i> Fevereiro 2023 - Maio 2023
                                                     </h3>
-                                                    <h4 class="timeline-title">Novo no mercado</h4>
-                                                    <p class="timeline-text">Por ser novo no mercado de trabalho, não
-                                                        possuo experiências prévias.</p>
+                                                    <h4 class="timeline-title">Estagiário Jurídico e Responsável Financeiro </h4>
+                                                    <p class="timeline-text">Fui estaguiário no escritório Lemes Teixeira Advocacia, sendo Responsável pelo
+                                                        setor financeiro do escritório e sendo técnico redigindo petições. </p>
                                                 </div>
                                             </div>
                                         </div>
